<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/claim_name_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/claim_name_prompt"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:labelFor="@+id/claim_name_text" />
    
    <EditText
        android:id="@+id/claim_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" >

        <requestFocus android:layout_width="match_parent" />

    </EditText>
    
    <TextView
        android:id="@+id/claim_start_date_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/claim_start_date_prompt"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:labelFor="@+id/claim_start_date" />
    <EditText
        android:id="@+id/claim_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/date_hint"
        android:textSize="16sp" />

    
    <TextView
        android:id="@+id/claim_end_date_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/claim_end_date_prompt"
        android:labelFor="@+id/claim_end_date"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <EditText
        android:id="@+id/claim_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/date_hint"
        android:textSize="16sp" />

    <ListView
        android:id="@+id/expense_list"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_weight="1" >
    </ListView>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
	    <Button
	        android:id="@+id/add_expense_button"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/add_expense_string"
	        android:layout_weight="1" />
	
	    <Button
	        android:id="@+id/save_button"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/save"
	        android:layout_weight="1" />
    </LinearLayout>
	    
</LinearLayout>
